feat: implement basic domain model and REST API contract to create Player and add Creature to players
