# src/main/kotlin/infrastructure/driven/rest/routes/player/request/AddCreatureRequest.kt
@@ -1,0 +1,10 @@
+package com.romina.infrastructure.driven.rest.routes.player.request
+
+import com.romina.application.domain.model.CreatureClass
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class AddCreatureRequest(
+    val creatureName: String,
+    val creatureClass : CreatureClass
+)
