# src/main/kotlin/infrastructure/driven/rest/routes/player/request/CreatePlayerRequest.kt
@@ -1,0 +1,8 @@
+package com.romina.infrastructure.driven.rest.routes.player.request
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class CreatePlayerRequest(
+    val playerName : String
+)
